--- a/mods.html
+++ b/mods.html
@@ -300,7 +300,7 @@
 				<p>Implements the OptiFine connected textures format and adds emissive texture support for blocks and items.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="updated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-model-features">
@@ -314,7 +314,7 @@
 				<p>Implements the OptiFine custom entity models and animations format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.20.5-rc2</span>
+				<span class="updated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-texture-features">
@@ -328,7 +328,7 @@
 				<p>Implements the OptiFine random and emissive mob textures format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.20.5-rc2</span>
+				<span class="updated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="fabricskyboxes">
@@ -471,7 +471,7 @@
 				<p>Reduces memory usage.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="updated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="immediatelyfast">
@@ -485,7 +485,7 @@
 				<p>Improves immediate mode rendering performance.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="updated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="krypton">
@@ -799,7 +799,7 @@
 				<p>Allows for taking screenshots of any resolution.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="updated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="horse-stats-vanilla">
