--- a/mods.html
+++ b/mods.html
@@ -174,7 +174,7 @@
 				<p>Required by <a href="#iris">Iris</a>, <a href="#nvidium">NVidium</a>, <a href="#reeses-sodium-options">Reese's Sodium Options</a>, and <a href="#sodium-extra">Sodium Extra</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="updated"><span class="circle"></span> 1.20.6</span>
 			</div>
 		</div>
 		<div class="mod" id="sodium-extra">
@@ -188,7 +188,7 @@
 				<p>Adds some configurations not included in <a href="#sodium">Sodium</a>, such as adjustable cloud height and more advanced particle controls.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="reeses-sodium-options">
@@ -202,7 +202,7 @@
 				<p>Better options menu for both <a href="#sodium">Sodium</a> and <a href="#sodium-extra">Sodium Extra</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="iris">
@@ -216,7 +216,7 @@
 				<p>Implements the OptiFine shader format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="lambdynamiclights">
@@ -244,7 +244,7 @@
 				<p>More aggressive block face culling.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="zoomify">
@@ -258,7 +258,7 @@
 				<p>Adds a highly-configurable zoom.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="animatica">
@@ -300,7 +300,7 @@
 				<p>Implements the OptiFine connected textures format and adds emissive texture support for blocks and items.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-model-features">
@@ -314,7 +314,7 @@
 				<p>Implements the OptiFine custom entity models and animations format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-texture-features">
@@ -328,7 +328,7 @@
 				<p>Implements the OptiFine random and emissive mob textures format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="fabricskyboxes">
@@ -343,7 +343,7 @@
 				<p>Required by <a href="#fabricskyboxes-interop">FabricSkyBoxes Interop</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="fabricskyboxes-interop">
@@ -357,7 +357,7 @@
 				<p>Implements the OptiFine custom skyboxes format within <a href="#fabricskyboxes">FabricSkyBoxes</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="optigui">
@@ -371,7 +371,7 @@
 				<p>Implements the OptiFine custom GUI format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="vanadium">
@@ -401,7 +401,7 @@
 				<p>A Fabric mod designed to improve the chunk performance of Minecraft.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="distant-horizons">
@@ -429,7 +429,7 @@
 				<p>Improves performance when Minecraft is in the background.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="updated"><span class="circle"></span> 1.20.6</span>
 			</div>
 		</div>
 		<div class="mod" id="enhanced-block-entities">
@@ -457,7 +457,7 @@
 				<p>Skips rendering entities that aren't in view.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="ferritecore">
@@ -471,7 +471,7 @@
 				<p>Reduces memory usage.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="immediatelyfast">
@@ -485,7 +485,7 @@
 				<p>Improves immediate mode rendering performance.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="updated"><span class="circle"></span> 1.20.6</span>
 			</div>
 		</div>
 		<div class="mod" id="krypton">
@@ -527,7 +527,7 @@
 				<p>Optimizes general game logic to improve tick speed.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="updated"><span class="circle"></span> 1.20.6</span>
 			</div>
 		</div>
 		<div class="mod" id="noisium">
@@ -571,7 +571,7 @@
 				<p>Fixes bugs.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="memory-leak-fix">
@@ -613,7 +613,7 @@
 				<p>Improves performance, reduces memory usage, and fixes many bugs.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="updated"><span class="circle"></span> 1.20.6</span>
 			</div>
 		</div>
 		<div class="mod" id="whiteout">
@@ -627,7 +627,7 @@
 				<p>Ports the bugfixes offered by the Paper project to Fabric.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="very-outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<h2>Graphical and Audio Improvements</h2>
@@ -643,7 +643,7 @@
 				<p>Renders player skins in 3D.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="betterf3">
@@ -713,7 +713,7 @@
 				<p>Adds missing third-persion animations and modifies others to be better representative.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="paginated-advancements">
@@ -755,7 +755,7 @@
 				<p>Provides realistic sound attenuation, reverberation, and absorption.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="tiny-item-animations">
@@ -783,7 +783,7 @@
 				<p>The cape shouldn't be a static slab.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<h2>Tools</h2>
@@ -799,7 +799,7 @@
 				<p>Allows for taking screenshots of any resolution.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="horse-stats-vanilla">
@@ -855,7 +855,7 @@
 				<p>Provides a menu in which to see and configure all mods which you have installed.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="updated"><span class="circle"></span> 1.20.6</span>
 			</div>
 		</div>
 		<div class="mod" id="notes">
@@ -899,7 +899,7 @@
 				<p>See who you're chatting with!</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="updated"><span class="circle"></span> 1.20.6</span>
 			</div>
 		</div>
 		<div class="mod" id="cleardespawn">
@@ -941,7 +941,7 @@
 				<p>Removes all fade-out animations.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.6-rc1</span>
 			</div>
 		</div>
 		<div class="mod" id="morechathistory">
@@ -955,7 +955,7 @@
 				<p>Increases the maximum length of the chat history.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="no-chat-reports">
@@ -985,7 +985,7 @@
 				<p>Required when using <a href="#dynamic-fps">Dynamic FPS</a>, <a href="#paginated-advancements">Paginated Advancements</a>, <a href="#sound-physics-remastered">Sound Physics Remastered</a>, and/or <a href="more-culling">More Culling</a> together with <a href="#mod-menu">Mod Menu</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="fabric-api">
@@ -999,7 +999,7 @@
 				<p>Required by <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#fabricskyboxes">FabricSkyBoxes</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#indium">Indium</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#optigui">OptiGUI</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#vanadium">Vanadium</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.6-rc1</span>
 			</div>
 		</div>
 		<div class="mod" id="fabric-language-kotlin">
@@ -1013,7 +1013,7 @@
 				<p>Required by <a href="#optigui">OptiGUI</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="indium">
@@ -1055,7 +1055,7 @@
 				<p>Required by <a href="#debugify">Debugify</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 	</body>
