--- a/mods.html
+++ b/mods.html
@@ -627,7 +627,7 @@
 				<p>Ports the bugfixes offered by the Paper project to Fabric.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.5</span>
+				<span class="updated"><span class="circle"></span> 1.20.6</span>
 			</div>
 		</div>
 		<h2>Graphical and Audio Improvements</h2>
