--- a/mods.html
+++ b/mods.html
@@ -571,7 +571,7 @@
 				<p>Fixes bugs.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.5</span>
+				<span class="outdated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="memory-leak-fix">
@@ -585,7 +585,7 @@
 				<p>Fixes known memory leaks.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="outdated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
 		<div class="mod" id="model-gap-fix">
