--- a/mods.html
+++ b/mods.html
@@ -1027,7 +1027,7 @@
 				<p>Required when using <a href="#continuity">Continuity</a>, <a href="#enhanced-block-entities">Enhanced Block Entities</a>, and/or <a href="#vanadium">Vanadium</a> together with <a href="#sodium">Sodium</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="updated"><span class="circle"></span> 1.20.6</span>
 			</div>
 		</div>
 		<div class="mod" id="malilib">
