--- a/mods.html
+++ b/mods.html
@@ -371,7 +371,7 @@
 				<p>Implements the OptiFine custom GUI format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.20.5</span>
+				<span class="updated"><span class="circle"></span> 1.20.6</span>
 			</div>
 		</div>
 		<div class="mod" id="vanadium">
