--- a/mods.html
+++ b/mods.html
@@ -176,9 +176,9 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:67%"></div>
-			<div class="outdated" style="width:14%"></div>
-			<div class="very-outdated" style="width:19%"></div>
+			<div class="updated" style="width:70%"></div>
+			<div class="outdated" style="width:13%"></div>
+			<div class="very-outdated" style="width:17%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -895,7 +895,7 @@
 				<p>Adds a notepad to the game UI.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="updated"><span class="circle"></span> 1.20.6</span>
 			</div>
 		</div>
 		<div class="mod" id="shulker-box-tooltip">
@@ -909,7 +909,7 @@
 				<p>See contents of shulker box in inventory.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="updated"><span class="circle"></span> 1.20.6</span>
 			</div>
 		</div>
 		<h2>Other Quality of Life Improvements</h2>
