--- a/mods.html
+++ b/mods.html
@@ -176,9 +176,9 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:73%"></div>
+			<div class="updated" style="width:75%"></div>
 			<div class="outdated" style="width:10%"></div>
-			<div class="very-outdated" style="width:17%"></div>
+			<div class="very-outdated" style="width:15%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -469,7 +469,7 @@
 				<p>Reduces lag by rendering block entities as normal blocks.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.2</span>
+				<span class="updated"><span class="circle"></span> 1.20.6</span>
 			</div>
 		</div>
 		<div class="mod" id="entityculling">
