Mod updates to 1.21

--- a/mods.html
+++ b/mods.html
@@ -176,9 +176,9 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:63%"></div>
-			<div class="outdated" style="width:6%"></div>
-			<div class="very-outdated" style="width:31%"></div>
+			<div class="updated" style="width:76%"></div>
+			<div class="outdated" style="width:3%"></div>
+			<div class="very-outdated" style="width:21%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -441,7 +441,7 @@
 				<p>See farther without turning your game into a slide show.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.6</span>
+				<span class="updated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="dynamic-fps">
@@ -525,7 +525,7 @@
 				<p>Optimizes networking.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.20.6</span>
+				<span class="updated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="language-reload">
@@ -567,7 +567,7 @@
 				<p>Optimises worldgen performance for a better gameplay experience.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.6</span>
+				<span class="updated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="nvidium">
@@ -581,7 +581,7 @@
 				<p>Uses the nvidia rendering engine.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.6</span>
+				<span class="updated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<h2>Bug Fixes</h2>
@@ -795,7 +795,7 @@
 				<p>The cape shouldn't be a static slab.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.6</span>
+				<span class="updated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<h2>Tools</h2>
@@ -839,7 +839,7 @@
 				<p>Provides a holographic overlay of saved builds.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="very-outdated"><span class="circle"></span> 1.20.6</span>
 			</div>
 		</div>
 		<div class="mod" id="minihud">
@@ -853,7 +853,7 @@
 				<p>Provides on-screen info on various in-world properties.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="very-outdated"><span class="circle"></span> 1.20.6</span>
 			</div>
 		</div>
 		<div class="mod" id="mod-menu">
@@ -881,7 +881,7 @@
 				<p>Adds a notepad to the game UI.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.6</span>
+				<span class="updated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="shulker-box-tooltip">
@@ -895,7 +895,7 @@
 				<p>See contents of shulker box in inventory.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.6</span>
+				<span class="updated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<h2>Other Quality of Life Improvements</h2>
@@ -953,7 +953,7 @@
 				<p>Removes all fade-out animations.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 24w21b</span>
+				<span class="updated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="morechathistory">
