--- a/mods.html
+++ b/mods.html
@@ -176,9 +176,9 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:79%"></div>
+			<div class="updated" style="width:81%"></div>
 			<div class="outdated" style="width:3%"></div>
-			<div class="very-outdated" style="width:18%"></div>
+			<div class="very-outdated" style="width:16%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -270,7 +270,7 @@
 				<p>More aggressive block face culling.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.6</span>
+				<span class="updated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="zoomify">
