--- a/mods.html
+++ b/mods.html
@@ -939,7 +939,7 @@
 				<p>Doesn't clear the messages sent/received when disconnecting and/or relogging from a server or singleplayer.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.20.5?</span>
+				<span class="updated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="no-fade">
@@ -1053,7 +1053,7 @@
 				<p>Required by <a href="#litematica">Litematica</a> and <a href="#minihud">MiniHUD</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.6</span>
+				<span class="updated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="yetanotherconfiglib">
