--- a/mods.html
+++ b/mods.html
@@ -176,8 +176,8 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:21%"></div>
-			<div class="outdated" style="width:65%"></div>
+			<div class="updated" style="width:24%"></div>
+			<div class="outdated" style="width:62%"></div>
 			<div class="very-outdated" style="width:14%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -326,7 +326,7 @@
 				<p>Implements the OptiFine connected textures format and adds emissive texture support for blocks and items.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-model-features">
@@ -867,7 +867,7 @@
 				<p>Provides a menu in which to see and configure all mods which you have installed.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="notes">
