--- a/mods.html
+++ b/mods.html
@@ -176,7 +176,7 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:24%"></div>
+			<div class="updated" style="width:26%"></div>
 			<div class="outdated" style="width:62%"></div>
 			<div class="very-outdated" style="width:14%"></div>
 		</div>
@@ -581,7 +581,7 @@
 				<p>Uses the nvidia rendering engine.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<h2>Bug Fixes</h2>
