--- a/mods.html
+++ b/mods.html
@@ -176,8 +176,8 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:26%"></div>
-			<div class="outdated" style="width:60%"></div>
+			<div class="updated" style="width:32%"></div>
+			<div class="outdated" style="width:54%"></div>
 			<div class="very-outdated" style="width:14%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -214,7 +214,7 @@
 				<p>Adds some configurations not included in <a href="#sodium">Sodium</a>, such as adjustable cloud height and more advanced particle controls.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="reeses-sodium-options">
@@ -228,7 +228,7 @@
 				<p>Better options menu for both <a href="#sodium">Sodium</a> and <a href="#sodium-extra">Sodium Extra</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="iris">
@@ -997,7 +997,7 @@
 				<p>Required when using <a href="#dynamic-fps">Dynamic FPS</a>, <a href="#paginated-advancements">Paginated Advancements</a>, <a href="#sound-physics-remastered">Sound Physics Remastered</a>, and/or <a href="more-culling">More Culling</a> together with <a href="#mod-menu">Mod Menu</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="fabric-api">
@@ -1039,7 +1039,7 @@
 				<p>Required when using <a href="#continuity">Continuity</a>, <a href="#enhanced-block-entities">Enhanced Block Entities</a>, and/or <a href="#vanadium">Vanadium</a> together with <a href="#sodium">Sodium</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="malilib">
