--- a/mods.html
+++ b/mods.html
@@ -176,8 +176,8 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:34%"></div>
-			<div class="outdated" style="width:52%"></div>
+			<div class="updated" style="width:35%"></div>
+			<div class="outdated" style="width:51%"></div>
 			<div class="very-outdated" style="width:14%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -553,7 +553,7 @@
 				<p>Optimizes general game logic to improve tick speed.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="noisium">
