very outdated mods

--- a/mods.html
+++ b/mods.html
@@ -177,8 +177,8 @@
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
 			<div class="updated" style="width:37%"></div>
-			<div class="outdated" style="width:49%"></div>
-			<div class="very-outdated" style="width:14%"></div>
+			<div class="outdated" style="width:36%"></div>
+			<div class="very-outdated" style="width:27%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -483,7 +483,7 @@
 				<p>Skips rendering entities that aren't in view.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="very-outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="ferritecore">
@@ -567,7 +567,7 @@
 				<p>Optimises worldgen performance for a better gameplay experience.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="very-outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="nvidium">
@@ -597,7 +597,7 @@
 				<p>Fixes bugs.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="very-outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="memory-leak-fix">
@@ -669,7 +669,7 @@
 				<p>Renders player skins in 3D.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="very-outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="better-mount-hud">
@@ -725,7 +725,7 @@
 				<p>Adds missing third-persion animations and modifies others to be better representative.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="very-outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="paginated-advancements">
@@ -781,7 +781,7 @@
 				<p>Adds little animations when you pick up or insert items with your mouse.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="very-outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="wavey-capes">
@@ -795,7 +795,7 @@
 				<p>The cape shouldn't be a static slab.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="very-outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<h2>Tools</h2>
@@ -811,7 +811,7 @@
 				<p>Allows for taking screenshots of any resolution.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="very-outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="horse-stats-vanilla">
